--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -1,5 +1,7 @@
 .container {
-  padding: 0 2rem;
+  padding: 0 0rem;
+  position: relative;
+  text-align: center;
 }
 
 .main {
@@ -70,7 +72,7 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  max-width: 800px;
+  min-width: 800px;
 }
 
 .card {
@@ -79,13 +81,24 @@
   text-align: left;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
+  background: linear-gradient(
+    to top,
+    white 0%,
+    white 50%,
+    rgb(143, 255, 246) 50%,
+    rgb(143, 255, 246)
+  );
+  border-radius: 5px;
+  transition: color 0.15s ease, border-color 0.3s ease;
+  min-width: 200px;
+  min-height: 200px;
   max-width: 300px;
+  max-height: 400px;
 }
 
-.card:hover,
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
 .card:focus,
 .card:active {
   color: #0070f3;
@@ -93,14 +106,16 @@
 }
 
 .card h2 {
-  margin: 0 0 1rem 0;
+  margin: 0 0 0 0;
   font-size: 1.5rem;
+  text-align: center;
 }
 
 .card p {
   margin: 0;
   font-size: 1.25rem;
   line-height: 1.5;
+  text-align: center;
 }
 
 .logo {
