--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -156,6 +156,16 @@
   font-weight: bold;
 }
 
+.buttonGroupSelected {
+  color: white;
+  background-color: red;
+  border-radius: 0px;
+  border: 0px;
+  min-width: 80px;
+  min-height: 30px;
+  font-weight: bold;
+}
+
 .polaroid {
   width: 284px;
   padding: 10px 10px 20px 10px;
