--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -182,6 +182,17 @@
   background-color: blueviolet;
 }
 
+.winnerBox {
+  margin: 3px;
+  padding: 5px;
+  text-align: center;
+  justify-content: center;
+  border-radius: 3px;
+  background-color: rgb(200, 200, 200);
+  min-height: 30px;
+  font-size: 20px;
+}
+
 .form {
   margin: 3px;
   padding: 5px;
