--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -29,7 +29,7 @@
 }
 
 .title a {
-  color: #0070f3;
+  color: #ffffff;
   text-decoration: none;
 }
 
@@ -76,20 +76,14 @@
   margin: 1rem;
   padding: 1.5rem;
   text-align: center;
-  background: linear-gradient(
-    to top,
-    white 0%,
-    white 50%,
-    rgb(143, 255, 246) 60%,
-    rgb(143, 255, 246)
-  );
+  background: linear-gradient(to top, #071824 0%, #072336);
   border-radius: 5px;
   width: 300px;
   height: 330px;
 }
 
 .card:hover {
-  box-shadow: 0 8px 16px 0 red;
+  box-shadow: 0 8px 16px 0 rgb(152, 255, 93);
 }
 
 .card h2 {
@@ -116,15 +110,15 @@
   border-color: transparent;
   border-radius: 5px;
   border-width: 0;
-  background-color: rgb(168, 0, 160);
+  background-color: #657bf8;
   min-width: 80px;
   min-height: 30px;
-  box-shadow: 0px 4px 4px 0px #888888;
+  box-shadow: 0px 4px 4px 0px #172231;
 }
 
 .button:hover {
   color: white;
-  background-color: red;
+  background-color: rgb(255, 104, 104);
   font-weight: bold;
 }
 
@@ -136,7 +130,8 @@
 }
 
 .buttonGroup {
-  color: #000000;
+  color: inherit;
+  background-color: rgb(22, 54, 70);
   border-radius: 0px;
   border: 0px;
   min-width: 80px;
@@ -145,16 +140,17 @@
 
 .buttonGroup:hover {
   color: red;
+  font-weight: bold;
 }
 .buttonGroup:focus,
 .buttonGroup:active {
-  color: red;
+  color: rgb(255, 104, 104);
   font-weight: bold;
 }
 
 .buttonGroupSelected {
   color: white;
-  background-color: red;
+  background-color: rgb(255, 86, 86);
   border-radius: 0px;
   border: 0px;
   min-width: 80px;
@@ -175,7 +171,7 @@
   text-align: center;
   justify-content: center;
   border-radius: 3px;
-  background-color: blueviolet;
+  background-color: rgb(226, 198, 43);
 }
 
 .winnerBox {
@@ -184,7 +180,7 @@
   text-align: center;
   justify-content: center;
   border-radius: 3px;
-  background-color: rgb(200, 200, 200);
+  background-color: rgb(22, 54, 70);
   min-height: 30px;
   font-size: 20px;
 }
@@ -195,6 +191,11 @@
   text-align: center;
   justify-content: center;
   background-color: inherit;
+}
+
+.form input {
+  color: whitesmoke;
+  background-color: rgb(22, 54, 70);
 }
 
 @media (max-width: 600px) {
