--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -2,7 +2,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  background-color: rgb(73, 73, 73);
+  background-color: rgb(22, 51, 65);
+  color: #678488;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
