--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -1,9 +1,27 @@
-html,
-body {
-  padding: 0;
+html {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  height: 100vh;
   margin: 0;
+  padding: 0;
+  color: #b2d0d4;
+  background: rgb(22, 51, 65);
+}
+
+body {
+  margin: 0;
+  flex: 0 1 auto;
+  align-self: auto;
+  /*recommend 1920 / 1080 max based on usage stats, use 100% to that point*/
+  height: 100vh;
+  color: #b2d0d4;
   background-color: rgb(22, 51, 65);
-  color: #678488;
+  -webkit-box-shadow: 0px 0px 96px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 96px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 96px 0px rgba(0, 0, 0, 0.75);
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
