--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -40,7 +40,8 @@
 }
 
 .card:hover {
-  box-shadow: 0 8px 16px 0 rgb(152, 255, 93);
+  transition: all ease-in-out 200ms;
+  box-shadow: 0px 4px 16px 2px rgb(152, 255, 93);
 }
 
 .card h2 {
@@ -145,9 +146,10 @@
 
 .loginbutton:hover {
   color: #fff;
-  background-color: #dd5f24;
   transition: all ease-in-out 200ms;
+  box-shadow: 0px 4px 16px 2px rgb(152, 255, 93);
 }
+
 
 .polaroid {
   width: 284px;
@@ -209,9 +211,40 @@
   text-align: center;
 }
 
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modalContent {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
